# jsonschema-changelog

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-full.yml  ci-lite.yml  ci.yml  python-publish.yml
examples/: basic_diff.py  ci_integration.sh  generate_changelog.py  migrate_data.py  validate_compatibility.py
src/jsonschema_changelog/: __init__.py  changelog.py  classifier.py  cli.py  compatibility.py  diff.py  migration.py  utils.py
src/jsonschema_changelog/formatters/: __init__.py  html.py  json.py  markdown.py
tests/: __init__.py  test_changelog.py  test_classifier.py  test_cli.py  test_compatibility.py  test_diff.py  test_formatters.py  test_migration.py
tests/fixtures/: data_samples.json  schema_v1.json  schema_v2.json  schema_v3_breaking.json
