[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jsonschema-changelog"
version = "0.1.0"
description = "Detect, document, and manage changes between JSON Schema versions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Búho Zurdo", email = "dev@buhozurdo.com" },
]
maintainers = [
    { name = "raelcorrales", email = "rael@buhozurdo.com" },
]
keywords = [
    "json-schema",
    "changelog",
    "diff",
    "schema-evolution",
    "breaking-changes",
    "compatibility",
    "migration",
    "lims",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "jsonschema>=4.0.0",
    "click>=8.0.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
jsonschema-changelog = "jsonschema_changelog.cli:main"

[project.urls]
Homepage = "https://github.com/raelcorrales/jsonschema-changelog"
Documentation = "https://github.com/raelcorrales/jsonschema-changelog#readme"
Repository = "https://github.com/raelcorrales/jsonschema-changelog.git"
Issues = "https://github.com/raelcorrales/jsonschema-changelog/issues"
Changelog = "https://github.com/raelcorrales/jsonschema-changelog/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/jsonschema_changelog"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/jsonschema_changelog --cov-report=term-missing"

[tool.coverage.run]
source = ["src/jsonschema_changelog"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 80

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D100", "D104", "D103"]
